Rework serie ids: caching, user input,...